crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__assign_to_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/assign_to_closure.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f (global @3) ∅)
   (var g (global @4) ∅)
   (block
      (var local (cell @0) "local")
      (fun f_ (local @6) [] [Some(0)]
         (block
            (print (cell local @0))
            (expr (= (cell local @0) "after f"))
            (print (cell local @0))))
      (expr (= (global f @3) (local f_ @6)))
      (fun g_ (local @7) [] [Some(0)]
         (block
            (print (cell local @0))
            (expr (= (cell local @0) "after g"))
            (print (cell local @0))))
      (expr (= (global g @4) (local g_ @7))))
   (expr (call +5 (global f @3)))
   (expr (call +5 (global g @4))))

----- stderr -----
