crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__assign_to_shadowed_later.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/assign_to_shadowed_later.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "global")
   (block
      (fun assign (local @4) [] []
         (block
            (expr (= (global a @3) "assigned"))))
      (var a (local @5) "inner")
      (expr (call +6 (local assign @4)))
      (print (local a @5)))
   (print (global a @3)))

----- stderr -----
