crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__close_over_function_parameter.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/close_over_function_parameter.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f (global @1) ∅)
   (fun foo (global @2) [(cell param @0)] [None]
      (block
         (fun f_ (local @1) [] [Some(0)]
            (block
               (print (cell param @0))))
         (expr (= (global f @1) (local f_ @1)))))
   (expr (call +3 (global foo @2) "param"))
   (expr (call +3 (global f @1))))

----- stderr -----
