crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__close_over_later_variable.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/close_over_later_variable.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] [None, None]
      (block
         (var a (cell @1) "a")
         (var b (cell @0) "b")
         (fun g (local @2) [] [Some(0), Some(1)]
            (block
               (print (cell b @0))
               (print (cell a @1))))
         (expr (call +3 (local g @2)))))
   (expr (call +2 (global f @1))))

----- stderr -----
