crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__closed_closure_in_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/closed_closure_in_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f (global @3) ∅)
   (block
      (var local (cell @0) "local")
      (fun f_ (local @5) [] [Some(0)]
         (block
            (print (cell local @0))))
      (expr (= (global f @3) (local f_ @5))))
   (expr (call +4 (global f @3))))

----- stderr -----
