crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__open_closure_in_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/open_closure_in_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var local (cell @0) "local")
      (fun f (local @4) [] [Some(0)]
         (block
            (print (cell local @0))))
      (expr (call +5 (local f @4)))))

----- stderr -----
