crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__reuse_closure_slot.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/reuse_closure_slot.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var f (local @3) ∅)
      (block
         (var a (cell @0) "a")
         (fun f_ (local @5) [] [Some(0)]
            (block
               (print (cell a @0))))
         (expr (= (local f @3) (local f_ @5))))
      (block
         (var b (local @4) "b")
         (expr (call +5 (local f @3))))))

----- stderr -----
