crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__closure__unused_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/unused_closure.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var a (cell @0) "a")
      (if
         false
         (block
            (fun foo (local @4) [] [Some(0)]
               (block
                  (expr (cell a @0)))))
         ∅))
   (print "ok"))

----- stderr -----
